--- a/meson.build
+++ b/meson.build
@@ -1,23 +1,10 @@
 project('evil-engine', 'c',
   version: '0.1.0',
-  default_options: ['c_std=c99', 'warning_level=2']
+  default_options: ['c_std=c99', 'warning_level=2', 'optimization=2']
 )
 
-# Godot headers path (from env or meson option)
-godot_headers = get_option('godot_headers')
-if godot_headers == ''
-  godot_headers = run_command('sh', '-c', 'echo $GODOT_HEADERS', check: false).stdout().strip()
-endif
-
-if godot_headers == ''
-  error('GODOT_HEADERS not set. Run from nix develop or pass -Dgodot_headers=<path>')
-endif
-
-godot_inc = include_directories(godot_headers)
-
-# Project includes
-src_inc = include_directories('src')
-gdext_inc = include_directories('gdextension')
+# Project includes (gdextension_interface.h is in include/)
+inc_dirs = include_directories('include', 'src', 'gdextension')
 
 # Portable game logic (no Godot dependencies)
 src_files = files(
@@ -33,7 +20,7 @@ gdext_files = files(
 # Build shared library
 shared_library('evil_engine',
   src_files + gdext_files,
-  include_directories: [godot_inc, src_inc, gdext_inc],
+  include_directories: inc_dirs,
   name_prefix: 'lib',
   install: true,
 )
