--- a/meson.build
+++ b/meson.build
@@ -3,12 +3,23 @@ project('evil-engine', 'c',
   default_options: ['c_std=c99', 'warning_level=2', 'optimization=2']
 )
 
-# Project includes (gdextension_interface.h is in include/)
-inc_dirs = include_directories('include', 'src', 'gdextension')
+# Project includes
+inc_dirs = include_directories(
+  'include',
+  'src',
+  'src/psx',
+  'src/blb',
+  'src/level',
+  'src/render',
+  'gdextension'
+)
 
 # Portable game logic (no Godot dependencies)
 src_files = files(
   'src/game.c',
+  'src/blb/blb.c',
+  'src/level/level.c',
+  'src/render/render.c',
 )
 
 # GDExtension bindings
