--- a/meson.build
+++ b/meson.build
@@ -31,6 +31,8 @@ game_files = files(
 # GDExtension bindings
 gdext_files = files(
   'gdextension/entry.c',
+  'gdextension/api.c',
+  'gdextension/class_binding.c',
   'gdextension/engine_node.c',
   'gdextension/blb_archive.c',
   'gdextension/gd_helpers.c',
